syntax = "proto2";

option java_package = "com.su.msg";
option csharp_namespace = "Assets.Scripts.Proto";
option optimize_for = SPEED;

// 玩家数据
message PlayerMo {
	optional int64 id = 1;				// id
	optional string account = 2;		// 账号
	optional string picture = 3;		// 头像
	optional string name = 4;			// 名称
	optional int32 sex = 5;				// 性别
	optional int32 title = 6;			// 头衔
	optional int32 peanut = 7;			// 花生
	optional int32 diamond = 8;			// 钻石
	optional int32 winRate = 9;			// 胜率
	optional int32 winStreak = 10;		// 最高连胜
	optional int32 totalGames = 11;		// 总对局
	optional int32 highMultiple = 12;	// 最高倍数
	optional int32 totalPeanut = 13;	// 累计赢花生
	optional int32 doubleCount = 14;	// 加倍次数
	optional int32 playCount = 15;		// 出牌次数
	optional int32 suppressCount = 16;	// 压制次数
}

// 获取玩家数据
message GetPlayer {
}
message GetPlayerTo {
	optional PlayerMo player = 1;
}

// 玩家数据更新通知
message UpdatePlayerNo {
	optional PlayerMo player = 1;
}

